package br.com.marlonprado.ynab_clone_api.model.enums;

public enum AccountType {
    CHECKING,
    SAVINGS,
    CREDIT_CARD,
    CASH
}
