package br.com.marlonprado.ynab_clone_api.model.enums.transaction;

public enum RecurrenceFrequency {
    ONCE,
    DAILY, 
    WEEKLY, 
    BIWEEKLY, 
    MONTHLY, 
    BIMONTHLY, 
    TRIMONTHLY, 
    SIXMONTHLY,
    YEARLY
}
