package br.com.marlonprado.ynab_clone_api.model.enums.transaction;

public enum RecurrenceType {
    ONCE,
    FIXED,
    INSTALLMENT
}
