package br.com.marlonprado.ynab_clone_api.transaction;

public enum TransactionType {
    INCOME,
    EXPANSE,
    TRANSFER
}
