@startuml

class Account {
  +Long id
  +String name
  +AccountType type
  +BigDecimal currentBalance
  +Boolean isBudgetIncluded
  +LocalDate balanceDate
  +LocalDateTime createdAt
  +LocalDateTime updatedAt
}

enum AccountType {
  CASH
  DEBIT
  SAVINGS
  INVESTMENT
  CREDIT
}

class Category {
  +Long id
  +String name
  +LocalDateTime createdAt
  +LocalDateTime updatedAt
}

class Subcategory {
  +Long id
  +String name
  +LocalDateTime createdAt
  +LocalDateTime updatedAt
  +Long categoryId
}

class Transaction {
  +Long id
  +LocalDate date
  +BigDecimal amount
  +TransactionType operation
  +UUID transferGroupId
  +RecurrenceType recurrence
  +RecurrenceFrequency recurrenceFrequency
  +Integer installmentCount
  +UUID groupId
  +String payee
  +String description
  +Boolean isCleared
  +LocalDateTime createdAt
  +LocalDateTime updatedAt
  +Long fromAccountId
  +Long toAccountId
  +Long subcategoryId
}

enum TransactionType {
  INCOME
  EXPENSE
  TRANSFER
}

enum RecurrenceType {
  ONCE
  FIXED
  INSTALLMENT
}

enum RecurrenceFrequency {
  ONCE
  DAILY
  WEEKLY
  BIWEEKLY
  MONTHLY
  BIMONTHLY
  TRIMONTHLY
  SIXMONTHLY
  YEARLY
}

class Budget {
  +Long id
  +Integer month
  +Integer year
  +BigDecimal plannedAmount
  +BigDecimal actualAmount
  +LocalDateTime createdAt
  +LocalDateTime updatedAt
  +Long subcategoryId
}

' RELATIONSHIPS
Subcategory --> Category : belongs to
Transaction --> Account : fromAccountId
Transaction --> Account : toAccountId
Transaction --> Subcategory : subcategoryId
Budget --> Subcategory : subcategoryId
Account "1" --> "0..*" Transaction : originAccount
Account "1" --> "0..*" Transaction : destinationAccount
Category "1" --> "0..*" Subcategory : contains
Subcategory "1" --> "0..*" Budget : budgets

@enduml
